[package]
name = "securefs"
version = "0.3.0"
edition = "2021"

[dependencies]
chacha20poly1305 = "0.10" # XChaCha20-Poly1305 AEAD
rand_core = "0.6"
zeroize = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "io-std", "macros", "rt-multi-thread"] }
anyhow = "1"
thiserror = "1"
flate2 = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"

[[bin]]
name = "securefs"
path = "cli/main.rs"

[dev-dependencies]
tempfile = "3"

[lib]
path = "lib.rs"
